# apoc-agent

./: INSTALL  Makefile.am  autogen.sh  configure.ac  libapoc.pc.in
apocd/: Makefile.am  apocd.c  apocd.h  config.h.in  linux.c  solaris.c
apocd/win32/: apocdctl.c
initd/: apocd.in
libapoc/: Makefile.am  config.h.in  papi.c  papi.h  papiConnection.c  papiConnection.h  papiDaemon.c  papiDaemon.h  papiDatabase.c  papiDatabase.h  papiEntityList.c  papiEntityList.h  papiInternal.c  papiInternal.h  papiLayerList.c  papiLayerList.h  papiListenerList.c  papiListenerList.h  papiMessage.c  papiMessage.h  papiPort.c  papiSAXParserContext.c  papiSAXParserContext.h  papiStringList.c  papiStringList.h  papiTypes.h  papiUtils.c  papiUtils.h  papitool.c
libapoc/w32/: Makefile  Makefile.old  papiPort.c
libfileaccess/: FileAccess.c  FileAccess.h  Makefile.am
smf/: apocd.xml.in
src/: Makefile.am
src/com/sun/apoc/daemon/: Makefile.am  build.xml.in
src/com/sun/apoc/daemon/admin/: AdminManager.java  AdminOpHandler.java  PortMapper.java
src/com/sun/apoc/daemon/apocd/: Cache.java  CacheFactory.java  CacheReadResult.java  ChangeDetectEventHandler.java  Client.java  ClientEventHandler.java  ClientManager.java  Daemon.java  EventHandler.java  EventQueue.java  EventWorkerThread.java  EventWorkerThreadPool.java  GarbageCollectEventHandler.java  PolicyBackend.java  PolicyBackendFactory.java  SaslAuthCallbackHandler.java  Session.java  SessionListener.java  UpdateAggregator.java
src/com/sun/apoc/daemon/config/: ConfigEventListener.java  DaemonConfig.java  LocalConfig.java  RemoteConfig.java
src/com/sun/apoc/daemon/localdatabase/: Database.java  LocalDatabase.java  LocalDatabaseFactory.java  SetDbt.java  StringDbt.java  Timestamp.java  UpdateItem.java  VectorStringDbt.java
src/com/sun/apoc/daemon/messaging/: AddListenerMessage.java  CreateSessionExtMessage.java  CreateSessionMessage.java  CredentialsProviderMessage.java  DestroySessionMessage.java  ListMessage.java  Message.java  MessageFactory.java  Messenger.java  Notification.java  ProtocolDeserialiser.java  ProtocolHandler.java  ProtocolUnbinder.java  ReadMessage.java  RemoveListenerMessage.java  RequestReceiver.java  Response.java
src/com/sun/apoc/daemon/misc/: APOCAuthenticator.java  APOCException.java  APOCLogger.java  APOCSymbols.java  ConfigurableLogger.java  DaemonTimerTask.java  FileAccess.java  Name.java
src/com/sun/apoc/daemon/properties/: apocd.properties  daemon.properties  defaults.properties  os.properties.in  policymgr.properties
src/com/sun/apoc/daemon/transaction/: AddListenerTransaction.java  ChangeDetectTransaction.java  CreateSessionExtTransaction.java  CreateSessionTransaction.java  DestroySessionTransaction.java  GarbageCollectTransaction.java  ListTransaction.java  ReadTransaction.java  RemoveListenerTransaction.java  Transaction.java  TransactionFactory.java
src/com/sun/apoc/daemon/transport/: ChannelManager.java  ClientChannel.java  ClientChannelEventListener.java
