lib_LTLIBRARIES = libapoc.la

libapocdir = $(includedir)/apoc/papi

libapoc_HEADERS = \
	papi.h \
	papiTypes.h

libapoc_la_LDFLAGS = -version-info "1:0:0"

libapoc_la_SOURCES = \
	papi.c \
	papi.h \
	papiConnection.h \
	papiConnection.c \
	papiDaemon.h \
	papiDaemon.c \
	papiDatabase.c \
	papiDatabase.h \
	papiInternal.c \
	papiInternal.h \
	papiLayerList.c \
	papiLayerList.h \
	papiListenerList.c \
	papiListenerList.h \
	papiMessage.c \
	papiMessage.h \
	papiSAXParserContext.c \
	papiSAXParserContext.h \
	papiStringList.c \
	papiStringList.h \
	papiEntityList.c \
	papiEntityList.h \
	papiUtils.c \
	papiUtils.h \
	papiPort.c \
	papiTypes.h


